extendedCoLa/parser/ParCoLa.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParCoLa.y
-----------------------------------------------------------------------------

state 253 contains 4 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pContract -> Contract                       (0)
	%start_pComponent -> Component                     (1)
	%start_pDefinition -> Definition                   (2)
	%start_pSimpleDefinition -> SimpleDefinition       (3)
	%start_pNumericalExpression -> NumericalExpression   (4)
	%start_pOperator -> Operator                       (5)
	%start_pConditionalDefinition -> ConditionalDefinition   (6)
	%start_pStatement -> Statement                     (7)
	%start_pConditionalStatement -> ConditionalStatement   (8)
	%start_pSimpleStatement -> SimpleStatement         (9)
	%start_pCondition -> Condition                     (10)
	%start_pSimpleCondition -> SimpleCondition         (11)
	%start_pBooleanExpression -> BooleanExpression     (12)
	%start_pID -> ID                                   (13)
	%start_pHolds -> Holds                             (14)
	%start_pSubject -> Subject                         (15)
	%start_pVerb -> Verb                               (16)
	%start_pVerbStatus -> VerbStatus                   (17)
	%start_pComparison -> Comparison                   (18)
	%start_pEqual -> Equal                             (19)
	%start_pMore -> More                               (20)
	%start_pModalVerb -> ModalVerb                     (21)
	%start_pObligation -> Obligation                   (22)
	%start_pDate -> Date                               (23)
	%start_pSpecificDate -> SpecificDate               (24)
	%start_pTemporalQuantifier -> TemporalQuantifier   (25)
	%start_pTemporalOffset -> TemporalOffset           (26)
	%start_pMonth -> Month                             (27)
	%start_pObject -> Object                           (28)
	%start_pNumericalObject -> NumericalObject         (29)
	%start_pPounds -> Pounds                           (30)
	%start_pDollars -> Dollars                         (31)
	%start_pEuros -> Euros                             (32)
	%start_pNonNumericalObject -> NonNumericalObject   (33)
	%start_pNum -> Num                                 (34)
	%start_pReceiver -> Receiver                       (35)
	Ident -> L_Ident                                   (36)
	Integer -> L_integ                                 (37)
	String -> L_quoted                                 (38)
	Contract ->                                        (39)
	Contract -> Component                              (40)
	Contract -> Component 'C-AND' Contract             (41)
	Component -> Definition                            (42)
	Component -> ConditionalDefinition                 (43)
	Component -> Statement                             (44)
	Component -> ConditionalStatement                  (45)
	Definition -> SimpleDefinition                     (46)
	Definition -> SimpleDefinition 'AND' Definition    (47)
	SimpleDefinition -> ID Subject 'IS' Subject        (48)
	SimpleDefinition -> ID Subject 'EQUALS' NumericalExpression   (49)
	SimpleDefinition -> ID Subject 'IS' Num Month Num   (50)
	NumericalExpression -> Num                         (51)
	NumericalExpression -> NumericalObject             (52)
	NumericalExpression -> NumericalExpression Operator NumericalExpression   (53)
	Operator -> 'PLUS'                                 (54)
	Operator -> 'MINUS'                                (55)
	Operator -> 'TIMES'                                (56)
	Operator -> 'DIVIDE'                               (57)
	ConditionalDefinition -> Definition 'IF' Condition   (58)
	ConditionalDefinition -> 'IF' Condition 'THEN' Definition   (59)
	ConditionalDefinition -> Definition 'IF' Condition 'ELSE' Definition   (60)
	ConditionalDefinition -> 'IF' Condition 'THEN' Definition 'ELSE' Definition   (61)
	Statement -> SimpleStatement                       (62)
	Statement -> SimpleStatement 'OR' Statement        (63)
	Statement -> SimpleStatement 'AND' Statement       (64)
	ConditionalStatement -> Statement 'IF' Condition   (65)
	ConditionalStatement -> 'IF' Condition 'THEN' Statement   (66)
	ConditionalStatement -> Statement 'IF' Condition 'ELSE' Statement   (67)
	ConditionalStatement -> 'IF' Condition 'THEN' Statement 'ELSE' Statement   (68)
	SimpleStatement -> ID Holds Subject ModalVerb Verb Object Receiver Date   (69)
	SimpleStatement -> ID Holds Subject Date ModalVerb Verb Object Receiver   (70)
	SimpleStatement -> ID Holds Date Subject ModalVerb Verb Object Receiver   (71)
	SimpleStatement -> ID Holds Subject VerbStatus Object Receiver Date   (72)
	SimpleStatement -> ID Subject ModalVerb Verb Object Receiver Date   (73)
	SimpleStatement -> ID Subject Date ModalVerb Verb Object Receiver   (74)
	SimpleStatement -> ID Date Subject ModalVerb Verb Object Receiver   (75)
	SimpleStatement -> ID Subject VerbStatus Object Receiver Date   (76)
	Condition -> SimpleCondition                       (77)
	Condition -> SimpleCondition 'OR' Condition        (78)
	Condition -> SimpleCondition 'AND' Condition       (79)
	SimpleCondition -> ID Holds Subject VerbStatus Object Receiver Date   (80)
	SimpleCondition -> ID Holds Subject Date VerbStatus Object Receiver   (81)
	SimpleCondition -> ID Holds Date Subject VerbStatus Object Receiver   (82)
	SimpleCondition -> ID Holds Subject ModalVerb Verb Object Receiver Date   (83)
	SimpleCondition -> ID Holds BooleanExpression      (84)
	SimpleCondition -> ID Subject VerbStatus Object Receiver Date   (85)
	SimpleCondition -> ID Subject Date VerbStatus Object Receiver   (86)
	SimpleCondition -> ID Date Subject VerbStatus Object Receiver   (87)
	SimpleCondition -> ID Subject ModalVerb Verb Object Receiver Date   (88)
	SimpleCondition -> ID BooleanExpression            (89)
	BooleanExpression -> Subject VerbStatus Comparison Subject   (90)
	ID -> '[' Num ']'                                  (91)
	ID -> '[' Num '(' Num ')' ']'                      (92)
	Holds -> 'it' 'is' 'the' 'case' 'that'             (93)
	Holds -> 'it' 'is' 'not' 'the' 'case' 'that'       (94)
	Subject -> String                                  (95)
	Subject -> Ident                                   (96)
	Verb -> 'deliver'                                  (97)
	Verb -> 'pay'                                      (98)
	Verb -> 'charge'                                   (99)
	Verb -> 'refund'                                   (100)
	VerbStatus -> 'delivered'                          (101)
	VerbStatus -> 'paid'                               (102)
	VerbStatus -> 'charged'                            (103)
	VerbStatus -> 'refunded'                           (104)
	Comparison -> 'less' 'than'                        (105)
	Comparison -> Equal                                (106)
	Comparison -> More                                 (107)
	Equal -> 'equals'                                  (108)
	Equal -> 'equal' 'to'                              (109)
	More -> 'more' 'than'                              (110)
	More -> 'greater' 'than'                           (111)
	ModalVerb -> Obligation                            (112)
	ModalVerb -> 'may'                                 (113)
	ModalVerb -> 'is' 'forbidden' 'to'                 (114)
	Obligation -> 'shall'                              (115)
	Obligation -> 'must'                               (116)
	Date -> SpecificDate                               (117)
	Date -> 'on' 'ANYDATE'                             (118)
	Date -> 'on' 'SOMEDATE' Subject                    (119)
	Date -> 'on' 'THEDATE' Subject                     (120)
	Date -> TemporalQuantifier Num Month Num           (121)
	Date -> TemporalQuantifier 'SOMEDATE' Subject      (122)
	Date -> TemporalQuantifier 'THEDATE' Subject       (123)
	Date -> TemporalOffset TemporalQuantifier 'SOMEDATE' Subject   (124)
	Date -> TemporalOffset TemporalQuantifier 'THEDATE' Subject   (125)
	Date -> TemporalQuantifier TemporalOffset TemporalQuantifier 'SOMEDATE' Subject   (126)
	Date -> TemporalQuantifier TemporalOffset TemporalQuantifier 'THEDATE' Subject   (127)
	SpecificDate -> 'on' 'the' Num Month Num           (128)
	SpecificDate -> 'on' Num Month Num                 (129)
	TemporalQuantifier -> 'after'                      (130)
	TemporalQuantifier -> 'before'                     (131)
	TemporalOffset -> Num 'day'                        (132)
	TemporalOffset -> Num 'year'                       (133)
	TemporalOffset -> Num 'week'                       (134)
	TemporalOffset -> Num 'days'                       (135)
	TemporalOffset -> Num 'years'                      (136)
	TemporalOffset -> Num 'weeks'                      (137)
	Month -> 'January'                                 (138)
	Month -> 'February'                                (139)
	Month -> 'March'                                   (140)
	Month -> 'April'                                   (141)
	Month -> 'May'                                     (142)
	Month -> 'June'                                    (143)
	Month -> 'July'                                    (144)
	Month -> 'August'                                  (145)
	Month -> 'September'                               (146)
	Month -> 'October'                                 (147)
	Month -> 'November'                                (148)
	Month -> 'December'                                (149)
	Object -> NumericalObject                          (150)
	Object -> NonNumericalObject                       (151)
	NumericalObject -> Pounds Num                      (152)
	NumericalObject -> Dollars Num                     (153)
	NumericalObject -> Euros Num                       (154)
	NumericalObject -> 'AMOUNT' Subject                (155)
	Pounds -> 'GBP'                                    (156)
	Pounds -> 'POUNDS'                                 (157)
	Pounds -> 'quid'                                   (158)
	Dollars -> 'USD'                                   (159)
	Dollars -> 'DOLLARS'                               (160)
	Dollars -> 'buck'                                  (161)
	Euros -> 'EUR'                                     (162)
	Euros -> 'EUROS'                                   (163)
	NonNumericalObject -> 'SOMECURRENCY' Subject       (164)
	NonNumericalObject -> 'REPORT' Subject             (165)
	NonNumericalObject -> 'NAMEDOBJECT' Subject        (166)
	NonNumericalObject -> 'OTHEROBJECT' Subject        (167)
	Num -> Integer                                     (168)
	Receiver -> 'to' Subject                           (169)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'AMOUNT'       { PT _ (TS _ 3) }
	'AND'          { PT _ (TS _ 4) }
	'ANYDATE'      { PT _ (TS _ 5) }
	'April'        { PT _ (TS _ 6) }
	'August'       { PT _ (TS _ 7) }
	'C-AND'        { PT _ (TS _ 8) }
	'DIVIDE'       { PT _ (TS _ 9) }
	'DOLLARS'      { PT _ (TS _ 10) }
	'December'     { PT _ (TS _ 11) }
	'ELSE'         { PT _ (TS _ 12) }
	'EQUALS'       { PT _ (TS _ 13) }
	'EUR'          { PT _ (TS _ 14) }
	'EUROS'        { PT _ (TS _ 15) }
	'February'     { PT _ (TS _ 16) }
	'GBP'          { PT _ (TS _ 17) }
	'IF'           { PT _ (TS _ 18) }
	'IS'           { PT _ (TS _ 19) }
	'January'      { PT _ (TS _ 20) }
	'July'         { PT _ (TS _ 21) }
	'June'         { PT _ (TS _ 22) }
	'MINUS'        { PT _ (TS _ 23) }
	'March'        { PT _ (TS _ 24) }
	'May'          { PT _ (TS _ 25) }
	'NAMEDOBJECT'  { PT _ (TS _ 26) }
	'November'     { PT _ (TS _ 27) }
	'OR'           { PT _ (TS _ 28) }
	'OTHEROBJECT'  { PT _ (TS _ 29) }
	'October'      { PT _ (TS _ 30) }
	'PLUS'         { PT _ (TS _ 31) }
	'POUNDS'       { PT _ (TS _ 32) }
	'REPORT'       { PT _ (TS _ 33) }
	'SOMECURRENCY' { PT _ (TS _ 34) }
	'SOMEDATE'     { PT _ (TS _ 35) }
	'September'    { PT _ (TS _ 36) }
	'THEDATE'      { PT _ (TS _ 37) }
	'THEN'         { PT _ (TS _ 38) }
	'TIMES'        { PT _ (TS _ 39) }
	'USD'          { PT _ (TS _ 40) }
	'['            { PT _ (TS _ 41) }
	']'            { PT _ (TS _ 42) }
	'after'        { PT _ (TS _ 43) }
	'before'       { PT _ (TS _ 44) }
	'buck'         { PT _ (TS _ 45) }
	'case'         { PT _ (TS _ 46) }
	'charge'       { PT _ (TS _ 47) }
	'charged'      { PT _ (TS _ 48) }
	'day'          { PT _ (TS _ 49) }
	'days'         { PT _ (TS _ 50) }
	'deliver'      { PT _ (TS _ 51) }
	'delivered'    { PT _ (TS _ 52) }
	'equal'        { PT _ (TS _ 53) }
	'equals'       { PT _ (TS _ 54) }
	'forbidden'    { PT _ (TS _ 55) }
	'greater'      { PT _ (TS _ 56) }
	'is'           { PT _ (TS _ 57) }
	'it'           { PT _ (TS _ 58) }
	'less'         { PT _ (TS _ 59) }
	'may'          { PT _ (TS _ 60) }
	'more'         { PT _ (TS _ 61) }
	'must'         { PT _ (TS _ 62) }
	'not'          { PT _ (TS _ 63) }
	'on'           { PT _ (TS _ 64) }
	'paid'         { PT _ (TS _ 65) }
	'pay'          { PT _ (TS _ 66) }
	'quid'         { PT _ (TS _ 67) }
	'refund'       { PT _ (TS _ 68) }
	'refunded'     { PT _ (TS _ 69) }
	'shall'        { PT _ (TS _ 70) }
	'than'         { PT _ (TS _ 71) }
	'that'         { PT _ (TS _ 72) }
	'the'          { PT _ (TS _ 73) }
	'to'           { PT _ (TS _ 74) }
	'week'         { PT _ (TS _ 75) }
	'weeks'        { PT _ (TS _ 76) }
	'year'         { PT _ (TS _ 77) }
	'years'        { PT _ (TS _ 78) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pContract rule  0
	%start_pComponent rule  1
	%start_pDefinition rule  2
	%start_pSimpleDefinition rule  3
	%start_pNumericalExpression rule  4
	%start_pOperator rule  5
	%start_pConditionalDefinition rule  6
	%start_pStatement rule  7
	%start_pConditionalStatement rule  8
	%start_pSimpleStatement rule  9
	%start_pCondition rule  10
	%start_pSimpleCondition rule  11
	%start_pBooleanExpression rule  12
	%start_pID      rule  13
	%start_pHolds   rule  14
	%start_pSubject rule  15
	%start_pVerb    rule  16
	%start_pVerbStatus rule  17
	%start_pComparison rule  18
	%start_pEqual   rule  19
	%start_pMore    rule  20
	%start_pModalVerb rule  21
	%start_pObligation rule  22
	%start_pDate    rule  23
	%start_pSpecificDate rule  24
	%start_pTemporalQuantifier rule  25
	%start_pTemporalOffset rule  26
	%start_pMonth   rule  27
	%start_pObject  rule  28
	%start_pNumericalObject rule  29
	%start_pPounds  rule  30
	%start_pDollars rule  31
	%start_pEuros   rule  32
	%start_pNonNumericalObject rule  33
	%start_pNum     rule  34
	%start_pReceiver rule  35
	Ident           rule  36
	Integer         rule  37
	String          rule  38
	Contract        rules 39, 40, 41
	Component       rules 42, 43, 44, 45
	Definition      rules 46, 47
	SimpleDefinition rules 48, 49, 50
	NumericalExpression rules 51, 52, 53
	Operator        rules 54, 55, 56, 57
	ConditionalDefinition rules 58, 59, 60, 61
	Statement       rules 62, 63, 64
	ConditionalStatement rules 65, 66, 67, 68
	SimpleStatement rules 69, 70, 71, 72, 73, 74, 75, 76
	Condition       rules 77, 78, 79
	SimpleCondition rules 80, 81, 82, 83, 84, 85, 86, 87, 88, 89
	BooleanExpression rule  90
	ID              rules 91, 92
	Holds           rules 93, 94
	Subject         rules 95, 96
	Verb            rules 97, 98, 99, 100
	VerbStatus      rules 101, 102, 103, 104
	Comparison      rules 105, 106, 107
	Equal           rules 108, 109
	More            rules 110, 111
	ModalVerb       rules 112, 113, 114
	Obligation      rules 115, 116
	Date            rules 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127
	SpecificDate    rules 128, 129
	TemporalQuantifier rules 130, 131
	TemporalOffset  rules 132, 133, 134, 135, 136, 137
	Month           rules 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149
	Object          rules 150, 151
	NumericalObject rules 152, 153, 154, 155
	Pounds          rules 156, 157, 158
	Dollars         rules 159, 160, 161
	Euros           rules 162, 163
	NonNumericalObject rules 164, 165, 166, 167
	Num             rule  168
	Receiver        rule  169

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pContract -> . Contract                      (rule 0)

	'IF'           shift, and enter state 161
	'['            shift, and enter state 126
	%eof           reduce using rule 39

	Contract       goto state 162
	Component      goto state 163
	Definition     goto state 156
	SimpleDefinitiongoto state 141
	ConditionalDefinitiongoto state 157
	Statement      goto state 158
	ConditionalStatementgoto state 159
	SimpleStatementgoto state 137
	ID             goto state 160

State 1

	%start_pComponent -> . Component                    (rule 1)

	'IF'           shift, and enter state 161
	'['            shift, and enter state 126

	Component      goto state 155
	Definition     goto state 156
	SimpleDefinitiongoto state 141
	ConditionalDefinitiongoto state 157
	Statement      goto state 158
	ConditionalStatementgoto state 159
	SimpleStatementgoto state 137
	ID             goto state 160

State 2

	%start_pDefinition -> . Definition                  (rule 2)

	'['            shift, and enter state 126

	Definition     goto state 154
	SimpleDefinitiongoto state 141
	ID             goto state 143

State 3

	%start_pSimpleDefinition -> . SimpleDefinition      (rule 3)

	'['            shift, and enter state 126

	SimpleDefinitiongoto state 153
	ID             goto state 143

State 4

	%start_pNumericalExpression -> . NumericalExpression    (rule 4)

	'AMOUNT'       shift, and enter state 63
	'DOLLARS'      shift, and enter state 52
	'EUR'          shift, and enter state 49
	'EUROS'        shift, and enter state 50
	'GBP'          shift, and enter state 56
	'POUNDS'       shift, and enter state 57
	'USD'          shift, and enter state 53
	'buck'         shift, and enter state 54
	'quid'         shift, and enter state 58
	L_integ        shift, and enter state 42

	Integer        goto state 40
	NumericalExpressiongoto state 150
	NumericalObjectgoto state 151
	Pounds         goto state 60
	Dollars        goto state 61
	Euros          goto state 62
	Num            goto state 152

State 5

	%start_pOperator -> . Operator                      (rule 5)

	'DIVIDE'       shift, and enter state 146
	'MINUS'        shift, and enter state 147
	'PLUS'         shift, and enter state 148
	'TIMES'        shift, and enter state 149

	Operator       goto state 145

State 6

	%start_pConditionalDefinition -> . ConditionalDefinition    (rule 6)

	'IF'           shift, and enter state 144
	'['            shift, and enter state 126

	Definition     goto state 140
	SimpleDefinitiongoto state 141
	ConditionalDefinitiongoto state 142
	ID             goto state 143

State 7

	%start_pStatement -> . Statement                    (rule 7)

	'['            shift, and enter state 126

	Statement      goto state 139
	SimpleStatementgoto state 137
	ID             goto state 134

State 8

	%start_pConditionalStatement -> . ConditionalStatement    (rule 8)

	'IF'           shift, and enter state 138
	'['            shift, and enter state 126

	Statement      goto state 135
	ConditionalStatementgoto state 136
	SimpleStatementgoto state 137
	ID             goto state 134

State 9

	%start_pSimpleStatement -> . SimpleStatement        (rule 9)

	'['            shift, and enter state 126

	SimpleStatementgoto state 133
	ID             goto state 134

State 10

	%start_pCondition -> . Condition                    (rule 10)

	'['            shift, and enter state 126

	Condition      goto state 131
	SimpleConditiongoto state 132
	ID             goto state 130

State 11

	%start_pSimpleCondition -> . SimpleCondition        (rule 11)

	'['            shift, and enter state 126

	SimpleConditiongoto state 129
	ID             goto state 130

State 12

	%start_pBooleanExpression -> . BooleanExpression    (rule 12)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	BooleanExpressiongoto state 127
	Subject        goto state 128

State 13

	%start_pID -> . ID                                  (rule 13)

	'['            shift, and enter state 126

	ID             goto state 125

State 14

	%start_pHolds -> . Holds                            (rule 14)

	'it'           shift, and enter state 124

	Holds          goto state 123

State 15

	%start_pSubject -> . Subject                        (rule 15)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	Subject        goto state 121

State 16

	%start_pVerb -> . Verb                              (rule 16)

	'charge'       shift, and enter state 115
	'deliver'      shift, and enter state 116
	'pay'          shift, and enter state 117
	'refund'       shift, and enter state 118

	Verb           goto state 114

State 17

	%start_pVerbStatus -> . VerbStatus                  (rule 17)

	'charged'      shift, and enter state 110
	'delivered'    shift, and enter state 111
	'paid'         shift, and enter state 112
	'refunded'     shift, and enter state 113

	VerbStatus     goto state 109

State 18

	%start_pComparison -> . Comparison                  (rule 18)

	'equal'        shift, and enter state 103
	'equals'       shift, and enter state 104
	'greater'      shift, and enter state 100
	'less'         shift, and enter state 108
	'more'         shift, and enter state 101

	Comparison     goto state 105
	Equal          goto state 106
	More           goto state 107

State 19

	%start_pEqual -> . Equal                            (rule 19)

	'equal'        shift, and enter state 103
	'equals'       shift, and enter state 104

	Equal          goto state 102

State 20

	%start_pMore -> . More                              (rule 20)

	'greater'      shift, and enter state 100
	'more'         shift, and enter state 101

	More           goto state 99

State 21

	%start_pModalVerb -> . ModalVerb                    (rule 21)

	'is'           shift, and enter state 97
	'may'          shift, and enter state 98
	'must'         shift, and enter state 93
	'shall'        shift, and enter state 94

	ModalVerb      goto state 95
	Obligation     goto state 96

State 22

	%start_pObligation -> . Obligation                  (rule 22)

	'must'         shift, and enter state 93
	'shall'        shift, and enter state 94

	Obligation     goto state 92

State 23

	%start_pDate -> . Date                              (rule 23)

	'after'        shift, and enter state 83
	'before'       shift, and enter state 84
	'on'           shift, and enter state 91
	L_integ        shift, and enter state 42

	Integer        goto state 40
	Date           goto state 87
	SpecificDate   goto state 88
	TemporalQuantifiergoto state 89
	TemporalOffset goto state 90
	Num            goto state 81

State 24

	%start_pSpecificDate -> . SpecificDate              (rule 24)

	'on'           shift, and enter state 86

	SpecificDate   goto state 85

State 25

	%start_pTemporalQuantifier -> . TemporalQuantifier    (rule 25)

	'after'        shift, and enter state 83
	'before'       shift, and enter state 84

	TemporalQuantifiergoto state 82

State 26

	%start_pTemporalOffset -> . TemporalOffset          (rule 26)

	L_integ        shift, and enter state 42

	Integer        goto state 40
	TemporalOffset goto state 80
	Num            goto state 81

State 27

	%start_pMonth -> . Month                            (rule 27)

	'April'        shift, and enter state 68
	'August'       shift, and enter state 69
	'December'     shift, and enter state 70
	'February'     shift, and enter state 71
	'January'      shift, and enter state 72
	'July'         shift, and enter state 73
	'June'         shift, and enter state 74
	'March'        shift, and enter state 75
	'May'          shift, and enter state 76
	'November'     shift, and enter state 77
	'October'      shift, and enter state 78
	'September'    shift, and enter state 79

	Month          goto state 67

State 28

	%start_pObject -> . Object                          (rule 28)

	'AMOUNT'       shift, and enter state 63
	'DOLLARS'      shift, and enter state 52
	'EUR'          shift, and enter state 49
	'EUROS'        shift, and enter state 50
	'GBP'          shift, and enter state 56
	'NAMEDOBJECT'  shift, and enter state 44
	'OTHEROBJECT'  shift, and enter state 45
	'POUNDS'       shift, and enter state 57
	'REPORT'       shift, and enter state 46
	'SOMECURRENCY' shift, and enter state 47
	'USD'          shift, and enter state 53
	'buck'         shift, and enter state 54
	'quid'         shift, and enter state 58

	Object         goto state 64
	NumericalObjectgoto state 65
	Pounds         goto state 60
	Dollars        goto state 61
	Euros          goto state 62
	NonNumericalObjectgoto state 66

State 29

	%start_pNumericalObject -> . NumericalObject        (rule 29)

	'AMOUNT'       shift, and enter state 63
	'DOLLARS'      shift, and enter state 52
	'EUR'          shift, and enter state 49
	'EUROS'        shift, and enter state 50
	'GBP'          shift, and enter state 56
	'POUNDS'       shift, and enter state 57
	'USD'          shift, and enter state 53
	'buck'         shift, and enter state 54
	'quid'         shift, and enter state 58

	NumericalObjectgoto state 59
	Pounds         goto state 60
	Dollars        goto state 61
	Euros          goto state 62

State 30

	%start_pPounds -> . Pounds                          (rule 30)

	'GBP'          shift, and enter state 56
	'POUNDS'       shift, and enter state 57
	'quid'         shift, and enter state 58

	Pounds         goto state 55

State 31

	%start_pDollars -> . Dollars                        (rule 31)

	'DOLLARS'      shift, and enter state 52
	'USD'          shift, and enter state 53
	'buck'         shift, and enter state 54

	Dollars        goto state 51

State 32

	%start_pEuros -> . Euros                            (rule 32)

	'EUR'          shift, and enter state 49
	'EUROS'        shift, and enter state 50

	Euros          goto state 48

State 33

	%start_pNonNumericalObject -> . NonNumericalObject    (rule 33)

	'NAMEDOBJECT'  shift, and enter state 44
	'OTHEROBJECT'  shift, and enter state 45
	'REPORT'       shift, and enter state 46
	'SOMECURRENCY' shift, and enter state 47

	NonNumericalObjectgoto state 43

State 34

	%start_pNum -> . Num                                (rule 34)

	L_integ        shift, and enter state 42

	Integer        goto state 40
	Num            goto state 41

State 35

	%start_pReceiver -> . Receiver                      (rule 35)

	'to'           shift, and enter state 39

	Receiver       goto state 38

State 36

	Ident -> . L_Ident                                  (rule 36)

	L_Ident        shift, and enter state 37


State 37

	Ident -> L_Ident .                                  (rule 36)

	'AND'          reduce using rule 36
	'C-AND'        reduce using rule 36
	'DIVIDE'       reduce using rule 36
	'ELSE'         reduce using rule 36
	'EQUALS'       reduce using rule 36
	'IF'           reduce using rule 36
	'IS'           reduce using rule 36
	'MINUS'        reduce using rule 36
	'OR'           reduce using rule 36
	'PLUS'         reduce using rule 36
	'THEN'         reduce using rule 36
	'TIMES'        reduce using rule 36
	'after'        reduce using rule 36
	'before'       reduce using rule 36
	'charged'      reduce using rule 36
	'delivered'    reduce using rule 36
	'is'           reduce using rule 36
	'may'          reduce using rule 36
	'must'         reduce using rule 36
	'on'           reduce using rule 36
	'paid'         reduce using rule 36
	'refunded'     reduce using rule 36
	'shall'        reduce using rule 36
	'to'           reduce using rule 36
	L_Ident        reduce using rule 36
	L_integ        reduce using rule 36
	L_quoted       reduce using rule 36
	%eof           reduce using rule 36


State 38

	%start_pReceiver -> Receiver .                      (rule 35)

	%eof           accept


State 39

	Receiver -> 'to' . Subject                          (rule 169)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	Subject        goto state 217

State 40

	Num -> Integer .                                    (rule 168)

	'('            reduce using rule 168
	')'            reduce using rule 168
	'AND'          reduce using rule 168
	'April'        reduce using rule 168
	'August'       reduce using rule 168
	'C-AND'        reduce using rule 168
	'DIVIDE'       reduce using rule 168
	'December'     reduce using rule 168
	'ELSE'         reduce using rule 168
	'February'     reduce using rule 168
	'IF'           reduce using rule 168
	'January'      reduce using rule 168
	'July'         reduce using rule 168
	'June'         reduce using rule 168
	'MINUS'        reduce using rule 168
	'March'        reduce using rule 168
	'May'          reduce using rule 168
	'November'     reduce using rule 168
	'OR'           reduce using rule 168
	'October'      reduce using rule 168
	'PLUS'         reduce using rule 168
	'September'    reduce using rule 168
	'THEN'         reduce using rule 168
	'TIMES'        reduce using rule 168
	']'            reduce using rule 168
	'charged'      reduce using rule 168
	'day'          reduce using rule 168
	'days'         reduce using rule 168
	'delivered'    reduce using rule 168
	'is'           reduce using rule 168
	'may'          reduce using rule 168
	'must'         reduce using rule 168
	'paid'         reduce using rule 168
	'refunded'     reduce using rule 168
	'shall'        reduce using rule 168
	'to'           reduce using rule 168
	'week'         reduce using rule 168
	'weeks'        reduce using rule 168
	'year'         reduce using rule 168
	'years'        reduce using rule 168
	L_Ident        reduce using rule 168
	L_quoted       reduce using rule 168
	%eof           reduce using rule 168


State 41

	%start_pNum -> Num .                                (rule 34)

	%eof           accept


State 42

	Integer -> L_integ .                                (rule 37)

	'('            reduce using rule 37
	')'            reduce using rule 37
	'AND'          reduce using rule 37
	'April'        reduce using rule 37
	'August'       reduce using rule 37
	'C-AND'        reduce using rule 37
	'DIVIDE'       reduce using rule 37
	'December'     reduce using rule 37
	'ELSE'         reduce using rule 37
	'February'     reduce using rule 37
	'IF'           reduce using rule 37
	'January'      reduce using rule 37
	'July'         reduce using rule 37
	'June'         reduce using rule 37
	'MINUS'        reduce using rule 37
	'March'        reduce using rule 37
	'May'          reduce using rule 37
	'November'     reduce using rule 37
	'OR'           reduce using rule 37
	'October'      reduce using rule 37
	'PLUS'         reduce using rule 37
	'September'    reduce using rule 37
	'THEN'         reduce using rule 37
	'TIMES'        reduce using rule 37
	']'            reduce using rule 37
	'charged'      reduce using rule 37
	'day'          reduce using rule 37
	'days'         reduce using rule 37
	'delivered'    reduce using rule 37
	'is'           reduce using rule 37
	'may'          reduce using rule 37
	'must'         reduce using rule 37
	'paid'         reduce using rule 37
	'refunded'     reduce using rule 37
	'shall'        reduce using rule 37
	'to'           reduce using rule 37
	'week'         reduce using rule 37
	'weeks'        reduce using rule 37
	'year'         reduce using rule 37
	'years'        reduce using rule 37
	L_Ident        reduce using rule 37
	L_quoted       reduce using rule 37
	%eof           reduce using rule 37


State 43

	%start_pNonNumericalObject -> NonNumericalObject .    (rule 33)

	%eof           accept


State 44

	NonNumericalObject -> 'NAMEDOBJECT' . Subject       (rule 166)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	Subject        goto state 216

State 45

	NonNumericalObject -> 'OTHEROBJECT' . Subject       (rule 167)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	Subject        goto state 215

State 46

	NonNumericalObject -> 'REPORT' . Subject            (rule 165)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	Subject        goto state 214

State 47

	NonNumericalObject -> 'SOMECURRENCY' . Subject      (rule 164)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	Subject        goto state 213

State 48

	%start_pEuros -> Euros .                            (rule 32)

	%eof           accept


State 49

	Euros -> 'EUR' .                                    (rule 162)

	L_integ        reduce using rule 162
	%eof           reduce using rule 162


State 50

	Euros -> 'EUROS' .                                  (rule 163)

	L_integ        reduce using rule 163
	%eof           reduce using rule 163


State 51

	%start_pDollars -> Dollars .                        (rule 31)

	%eof           accept


State 52

	Dollars -> 'DOLLARS' .                              (rule 160)

	L_integ        reduce using rule 160
	%eof           reduce using rule 160


State 53

	Dollars -> 'USD' .                                  (rule 159)

	L_integ        reduce using rule 159
	%eof           reduce using rule 159


State 54

	Dollars -> 'buck' .                                 (rule 161)

	L_integ        reduce using rule 161
	%eof           reduce using rule 161


State 55

	%start_pPounds -> Pounds .                          (rule 30)

	%eof           accept


State 56

	Pounds -> 'GBP' .                                   (rule 156)

	L_integ        reduce using rule 156
	%eof           reduce using rule 156


State 57

	Pounds -> 'POUNDS' .                                (rule 157)

	L_integ        reduce using rule 157
	%eof           reduce using rule 157


State 58

	Pounds -> 'quid' .                                  (rule 158)

	L_integ        reduce using rule 158
	%eof           reduce using rule 158


State 59

	%start_pNumericalObject -> NumericalObject .        (rule 29)

	%eof           accept


State 60

	NumericalObject -> Pounds . Num                     (rule 152)

	L_integ        shift, and enter state 42

	Integer        goto state 40
	Num            goto state 212

State 61

	NumericalObject -> Dollars . Num                    (rule 153)

	L_integ        shift, and enter state 42

	Integer        goto state 40
	Num            goto state 211

State 62

	NumericalObject -> Euros . Num                      (rule 154)

	L_integ        shift, and enter state 42

	Integer        goto state 40
	Num            goto state 210

State 63

	NumericalObject -> 'AMOUNT' . Subject               (rule 155)

	L_Ident        shift, and enter state 37
	L_quoted       shift, and enter state 122

	Ident          goto state 119
	String         goto state 120
	Subject        goto state 209

State 64

	%start_pObject -> Object .                          (rule 28)

	%eof           accept

